--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,32 @@
 html, body {
     padding: 0;
     margin: 0;
+    background: darksalmon;
+}
+.fill {
+    background-image: url('https://source.unsplash.com/random/150x150');
+    position: relative;
+    height: 150px;
+    width:150px;
+    top: 5px;
+    left: 5px;
+    cursor: pointer;
+}
+.empty {
+    display: inline-block;
+    height: 160px;
+    width: 160px;
+    margin: 10px;
+    border: 3px salmon solid;
+    background-color: #fff;
+}
+.hold {
+    border: 4px solid #ccc;
+}
+.hovered {
+    background: #f4f4f4;
+    border-style: dashed;
+}
+.invisible {
+    display: none;
 }
